// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ImageRenderer {...props} />: elements tree crop after upload succeed 1`] = `
<Card
  expandable={false}
  expanded={null}
  initiallyExpanded={false}
  style={
    Object {
      "maxWidth": 300,
    }
  }
>
  <CardText
    style={
      Object {
        "maxHeight": 300,
        "paddingBottom": 0,
      }
    }
  >
    <ImageCropper
      image={
        Object {
          "preview": "https://pics.example.com/200/100",
        }
      }
      setEditor={[MockFunction]}
    />
  </CardText>
  <CardActions>
    <RaisedButton
      disabled={false}
      fullWidth={false}
      label="Upload"
      labelPosition="after"
      name="Upload"
      onClick={[MockFunction]}
      primary={false}
      secondary={true}
    />
    <RaisedButton
      disabled={false}
      fullWidth={false}
      label="Change"
      labelPosition="before"
      name="Select"
      primary={true}
      secondary={false}
    >
      <ImageSelector
        setImage={[MockFunction]}
      />
    </RaisedButton>
    <FlatButton
      disabled={false}
      fullWidth={false}
      label="Reset"
      labelPosition="after"
      labelStyle={Object {}}
      onClick={[MockFunction]}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      primary={false}
      secondary={false}
      style={
        Object {
          "marginRight": 0,
          "minWidth": 85,
        }
      }
    />
  </CardActions>
</Card>
`;

exports[`<ImageRenderer {...props} />: elements tree with cropping props after selected an image 1`] = `
<Card
  expandable={false}
  expanded={null}
  initiallyExpanded={false}
  style={
    Object {
      "maxWidth": 300,
    }
  }
>
  <CardText
    style={
      Object {
        "maxHeight": 300,
        "paddingBottom": 0,
      }
    }
  >
    <ImageCropper
      image={
        Object {
          "preview": "https://pics.example.com/200/100",
        }
      }
      setEditor={[MockFunction]}
    />
  </CardText>
  <CardActions>
    <RaisedButton
      disabled={false}
      fullWidth={false}
      label="Upload"
      labelPosition="after"
      name="Upload"
      onClick={[MockFunction]}
      primary={false}
      secondary={true}
    />
    <RaisedButton
      disabled={false}
      fullWidth={false}
      label="Change"
      labelPosition="before"
      name="Select"
      primary={true}
      secondary={false}
    >
      <ImageSelector
        setImage={[MockFunction]}
      />
    </RaisedButton>
    <FlatButton
      disabled={false}
      fullWidth={false}
      label="Reset"
      labelPosition="after"
      labelStyle={Object {}}
      onClick={[MockFunction]}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      primary={false}
      secondary={false}
      style={
        Object {
          "marginRight": 0,
          "minWidth": 85,
        }
      }
    />
  </CardActions>
</Card>
`;

exports[`<ImageRenderer {...props} />: elements tree with default props 1`] = `
<Card
  expandable={false}
  expanded={null}
  initiallyExpanded={false}
  style={
    Object {
      "maxWidth": 300,
    }
  }
>
  <CardText
    style={
      Object {
        "maxHeight": 300,
        "paddingBottom": 0,
      }
    }
  />
  <CardActions>
    <RaisedButton
      disabled={false}
      fullWidth={false}
      label="Select Image"
      labelPosition="before"
      name="Select"
      primary={true}
      secondary={false}
    >
      <ImageSelector
        setImage={[MockFunction]}
      />
    </RaisedButton>
    <FlatButton
      disabled={true}
      fullWidth={false}
      label="Reset"
      labelPosition="after"
      labelStyle={Object {}}
      onClick={[MockFunction]}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      primary={false}
      secondary={false}
      style={
        Object {
          "marginRight": 0,
          "minWidth": 85,
        }
      }
    />
  </CardActions>
</Card>
`;

exports[`<ImageRenderer {...props} />: elements tree with failed (to upload) props 1`] = `
<Card
  expandable={false}
  expanded={null}
  initiallyExpanded={false}
  style={
    Object {
      "maxWidth": 300,
    }
  }
>
  <CardText
    style={
      Object {
        "maxHeight": 300,
        "paddingBottom": 0,
      }
    }
  >
    <ImageCropper
      image={
        Object {
          "preview": "https://pics.example.com/200/100",
        }
      }
      setEditor={[MockFunction]}
    />
  </CardText>
  <CardActions>
    <RaisedButton
      disabled={false}
      fullWidth={false}
      label="Retry"
      labelPosition="after"
      name="Upload"
      onClick={[MockFunction]}
      primary={false}
      secondary={true}
    />
    <RaisedButton
      disabled={false}
      fullWidth={false}
      label="Change"
      labelPosition="before"
      name="Select"
      primary={true}
      secondary={false}
    >
      <ImageSelector
        setImage={[MockFunction]}
      />
    </RaisedButton>
    <FlatButton
      disabled={false}
      fullWidth={false}
      label="Reset"
      labelPosition="after"
      labelStyle={Object {}}
      onClick={[MockFunction]}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      primary={false}
      secondary={false}
      style={
        Object {
          "marginRight": 0,
          "minWidth": 85,
        }
      }
    />
  </CardActions>
</Card>
`;

exports[`<ImageRenderer {...props} />: elements tree with uploaded props 1`] = `
<Card
  expandable={false}
  expanded={null}
  initiallyExpanded={false}
  style={
    Object {
      "maxWidth": 300,
    }
  }
>
  <CardText
    style={
      Object {
        "maxHeight": 300,
        "paddingBottom": 0,
      }
    }
  >
    <ImagePreviewer
      height="100%"
      src="https://pics.example.com/200/100"
      width="100%"
    />
  </CardText>
  <CardActions>
    <RaisedButton
      disabled={false}
      fullWidth={false}
      label="Crop"
      labelPosition="after"
      name="Crop"
      onClick={[MockFunction]}
      primary={true}
      secondary={false}
    />
    <RaisedButton
      disabled={false}
      fullWidth={false}
      label="Change"
      labelPosition="before"
      name="Select"
      primary={true}
      secondary={false}
    >
      <ImageSelector
        setImage={[MockFunction]}
      />
    </RaisedButton>
    <FlatButton
      disabled={false}
      fullWidth={false}
      label="Reset"
      labelPosition="after"
      labelStyle={Object {}}
      onClick={[MockFunction]}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      primary={false}
      secondary={false}
      style={
        Object {
          "marginRight": 0,
          "minWidth": 85,
        }
      }
    />
  </CardActions>
</Card>
`;

exports[`<ImageRenderer {...props} />: elements tree with uploading props 1`] = `
<Card
  expandable={false}
  expanded={null}
  initiallyExpanded={false}
  style={
    Object {
      "maxWidth": 300,
    }
  }
>
  <CardText
    style={
      Object {
        "maxHeight": 300,
        "paddingBottom": 0,
      }
    }
  >
    <LinearProgress
      max={100}
      min={0}
      mode="indeterminate"
      style={
        Object {
          "marginBottom": 5,
        }
      }
      value={0}
    />
    <ImageCropper
      image={
        Object {
          "preview": "https://pics.example.com/200/100",
        }
      }
      setEditor={[MockFunction]}
    />
  </CardText>
  <CardActions>
    <RaisedButton
      disabled={true}
      fullWidth={false}
      label="Upload"
      labelPosition="after"
      name="Upload"
      onClick={[MockFunction]}
      primary={false}
      secondary={true}
    />
    <RaisedButton
      disabled={false}
      fullWidth={false}
      label="Change"
      labelPosition="before"
      name="Select"
      primary={true}
      secondary={false}
    >
      <ImageSelector
        setImage={[MockFunction]}
      />
    </RaisedButton>
    <FlatButton
      disabled={false}
      fullWidth={false}
      label="Reset"
      labelPosition="after"
      labelStyle={Object {}}
      onClick={[MockFunction]}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      primary={false}
      secondary={false}
      style={
        Object {
          "marginRight": 0,
          "minWidth": 85,
        }
      }
    />
  </CardActions>
</Card>
`;
